--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>first assignment</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <header>
-
+    <header class="banner-container">
+        <div class="banner-content">
+            <img src="images/Group.png" alt="">
+    <p>"In the near future, I hope to become a Developer."</p>
+    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit labore error delectus adipisci perferendis doloribus ipsum iure, ex vel mollitia itaque amet nulla voluptates ut, incidunt omnis explicabo quasi cumque!</h2>
+    <button class="btn-primary">Contact with me</button>
+        </div>
+        
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
