--- a/index.html
+++ b/index.html
@@ -17,7 +17,44 @@
         
     </header>
     <main>
+        <section>
+            <div class="Development-selection">
+                <h3>Why Web Development??</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio autem explicabo natus eligendi aut quos amet labore adipisci, itaque repudiandae? Soluta quia suscipit repellendus ratione incidunt, magni quam officiis velit? .</p>
+            </div>
+            <div >
+                <div class="box">
+                    <div class="styles">
+                        <h4> I will Do Coding and Change The World</h4>
+                        <p>
+                            Lorem Ipsum Without coding, we wouldn't have the websites, apps and programs we depend on every day. Coding plays an important role in innovation and technological progress, as new software and applications are constantly being developed to improve our lives and solve complex problems.
+                        </p>
+                        <button class="nav">Learn More</button>
+                    </div>
+                    <div class="images-2"><img src="images/Layer_1.png" alt=""></div>
+                </div>
+                <div class="styles-1">
+                    <div class="images-1"><img src="images/Group 3.png" alt=""></div>
+                    <div><h4>I will help People by creating Modern Web System</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum exercitationem quidem eveniet nihil, ut doloribus eos possimus excepturi temporibus voluptatum laboriosam modi ipsam. Culpa ullam optio dolores velit molestias aut</p>
+                    <button class="nav">Learn More</button>
+                    </div>
 
+                </div>
+                <div>
+                    <div class="styles-2">
+                       <h4>
+                        I will Do Coding and Change The World
+                       </h4> 
+                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam accusantium perferendis commodi consequuntur, placeat eos maiores nisi et consequatur quaerat ab asperiores non, vero dicta excepturi quos vitae nihil doloremque.</p>
+                      <button class="nav">Learn More</button>
+                    </div>
+                    <div class="images"><img src="images/Group 4.png" alt=""></div>
+              <h1>video</h1>
+              <iframe src="<iframe width="560" height="315" src="https://www.youtube.com/embed/FKa37i_j_Zo?si=r9d256ELTjiLFWvK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" frameborder="0"></iframe>
+            </div>
+        </section>
+       
     </main>
     <footer>
 
